welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:6: error: not found: value faireV
		faireV()
                ^