welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
def faireMotif(){
	var i=0
	for(i<-1 to 9)
	{
		faireV()
		avance()
	}
	
}
